--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "type": "module",
     "name": "svelte-gantt",
     "description": "Interactive JavaScript Gantt chart/resource booking component",
     "version": "4.0.9-beta",
@@ -12,7 +13,7 @@
         "demo:dev": "run-p demo:start demo:autobuild",
         "docs": "run-p docs:*",
         "validate": "svelte-check",
-        "demokit:dev":"npm --prefix demo-sveltekit run dev"
+        "demokit:dev": "npm --prefix demo-sveltekit run dev"
     },
     "repository": {
         "type": "git",
@@ -53,7 +54,7 @@
         "rollup-plugin-svelte": "^7.1.0",
         "rollup-plugin-typescript2": "^0.22.1",
         "rollup-plugin-uglify": "^3.0.0",
-        "svelte": "^3.46.4",
+        "svelte": "^3.59.1",
         "svelte-check": "^1.0.0",
         "svelte-preprocess": "^4.9.8",
         "svelte-ts-preprocess": "^1.1.3",
@@ -61,6 +62,7 @@
         "typescript": "^4.4.4"
     },
     "dependencies": {
-        "sirv-cli": "^1.0.14"
+        "sirv-cli": "^1.0.14",
+        "svelte-routing": "^1.10.0"
     }
 }
