--- a/demo/package.json
+++ b/demo/package.json
@@ -17,7 +17,8 @@
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
 		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
+		"vite": "^4.4.2",
+		"font-awesome": "^4.7.0"
 	},
 	"type": "module"
 }
